--- a/src/pages/home.ejs
+++ b/src/pages/home.ejs
@@ -14,7 +14,7 @@
             <h2 class="text-base text-center font-semibold leading-7 text-gray-900">Create a Short URL</h2>
             <form id="new-url-form" action="/api/urls" method="POST" class="mt-4 w-full">
                 <div class="flex gap-2 flex-col justify-center lg:flex-row">
-                    <input type="url" name="url" id="url" required placeholder="Your long URL" class="w-full lg:w-80 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
+                    <input type="url" name="redirectUrl" id="url" required placeholder="Your long URL" class="w-full lg:w-80 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
                     <input type="text" name="name" id="alias" required placeholder="Alias name" class="w-full lg:w-56 px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent">
                     <div class="flex flex-col sm:flex-row gap-2">
                         <button type="submit" class="w-full lg:w-24 px-4 py-2 bg-indigo-600 text-white font-semibold rounded-md focus:outline-none focus:ring-2 focus:ring-indigo-600 focus:border-transparent hover:bg-indigo-700">
